[metadata]
name = rottnest_example_executables
description = "Rottnest Example Executables"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/quollnest/rottnest_example_executables


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = ~=3.8

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest~=6.2
